Data leakage definition.

--- a/glossary.tex
+++ b/glossary.tex
@@ -1,22 +1,21 @@
-\newabbreviation{erm}{ERM}{Empirical Risk Minimization}
-\newabbreviation{svm}{SVM}{Support Vector Machine}
+\newabbreviation{erm}{ERM}{empirical risk minimization}
+\newabbreviation{svm}{SVM}{support vector machine}
 \newabbreviation{bnf}{BNF}{Backus–Naur form}
-\newabbreviation{sql}{SQL}{Structured Query Language}
+\newabbreviation{sql}{SQL}{structured query language}
 \newabbreviation{ibm}{IBM}{International Business Machines Corporation}
-\newabbreviation{rdbms}{RDBMS}{Relational Database Management System}
-\newabbreviation{etl}{ETL}{Extract, Transform, Load}
-\newabbreviation{bi}{BI}{Business Intelligence}
-\newabbreviation{hdfs}{HDFS}{Hadoop Distributed File System}
-\newabbreviation{lusi}{LUSI}{Learning using Statistical Inference}
-\newabbreviation{iot}{IoT}{Internet of Things}
+\newabbreviation{rdbms}{RDBMS}{relational database management system}
+\newabbreviation{etl}{ETL}{extract, transform, load}
+\newabbreviation{bi}{BI}{business intelligence}
+\newabbreviation{hdfs}{HDFS}{hadoop distributed file system}
+\newabbreviation{lusi}{LUSI}{learning using statistical inference}
+\newabbreviation{iot}{IoT}{internet of things}
 \newabbreviation{lifo}{LIFO}{last-in-first-out}
 \newabbreviation{fifo}{FIFO}{first-in-first-out}
 \newabbreviation{pmf}{PMF}{probability mass function}
 \newabbreviation{pdf}{PDF}{probability density function}
 \newabbreviation{cdf}{CDF}{cumulative distribution function}
-\newabbreviation{cicd}{CI/CD}{Continuous Integration/Continuous Deployment}
+\newabbreviation{cicd}{CI/CD}{continuous integration/continuous deployment}
 
-% ontology
 \newglossaryentry{ontology}{%
   name=ontology,
   description={%
@@ -24,6 +23,13 @@
     information science, an ontology is a formal naming and definition of the types,
     properties, and interrelationships of the entities that really or fundamentally exist
     for a particular domain.}
+}
+
+\newglossaryentry{leakage}{%
+  name=data leakage,
+  description={%
+    Situation where information from the test set is used to transform the training
+    set in any way or to train the model.}
 }
 
 \makeglossaries
