--- a/planning.tex
+++ b/planning.tex
@@ -135,7 +135,7 @@ called the ground-truth or expected outcome.
 \paragraph{Performance assessment} Given a performance metric $R$, for each dataset $D_k$,
 we calculate
 $$p_k = R\!\left(\left[y_i\right]_i, \left[\hat{y}_i\right]_i\right)\text{.}$$
-Note that, by definition, $p_k$ is free of data leakage, as $\left[\phi_k,
+Note that, by definition, $p_k$ is free of \gls{leakage}, as $\left[\phi_k,
 \theta_k\right]$ are found without the use of the data in $D_{k,\text{test}}$ and to
 calculate $\hat{y}_i$ we use only $x_i$ (with no target $y_i$).
 
