Reference for exploratory analysis.

--- a/project.tex
+++ b/project.tex
@@ -688,6 +688,9 @@ The \emph{data sprint} is focused on the data tasks: collection, integration, ti
 exploration.  \Cref{chap:data} covers the subjects of collection, integration (database
 normalization and joins) and tidying.  Exploration refers to \emph{exploratory
 data analysis}, which is not covered in this book. % TODO yet (could be the next chapter)
+For a good introduction to exploratory data analysis, which includes both understanding
+and identifying issues in the data, consult chapter 3 of
+\textcite{Zumel2019}\footfullcite{Zumel2019}.
 The products (deliverables) of the data sprint are the exploratory analysis report and the
 data itself.  The exploratory analysis report is a document that describes the main
 characteristics of the data, such as the distribution of the variables, the presence of
