Reviewing chapter names.

--- a/data.tex
+++ b/data.tex
@@ -1,4 +1,4 @@
-\chapter{Fundamental data concepts}
+\chapter{Fundamental concepts}
 \label{chap:data}
 
 \chapterprecishere{The simple believes everything,
