--- a/ethics.tex
+++ b/ethics.tex
@@ -1,10 +1,10 @@
-\chapter{Ethical, privacy and legal issues}
+\chapter{Ethics, privacy and regulation}
 \label{chap:ethics}
 
 \chapterprecishere{It's a trap!
   \par\raggedleft--- \textup{Admiral Ackbar}, Star Wars Episode VI: Return of the Jedi}
 
-A few comments on the ethical, privacy and legal issues that data scientists should be aware of.
+A few comments on the ethical, privacy-related and legal issues that data scientists should be aware of.
 
 \begin{mainbox}{Chapter remarks}
 
