--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1,13 +1,13 @@
-\chapter{Fundamental concepts}
+\chapter{Mathematical foundations}
 \label{chap:preliminaries}
 
 \chapterprecishere{%
   Maar ik maak steeds wat ik nog niet kan om het te leeren kunnen.\par\raggedleft---
   \textup{Vincent van Gogh}, The Complete Letters of Vincent Van Gogh, Volume Three}
 
-Fundamental concepts in data science come from a variety of fields, including
-mathematics, statistics, computer science, optimization theory, and information theory.
-This appendix provides a brief overview of the main computational, mathematical and statistical
+Foundations in data science come from a variety of fields, including
+algebra, statistics, computer science, optimization theory, and information theory.
+This appendix provides a brief overview of the main computational, algebra and statistical
 concepts in data science.
 
 My goal is not to provide a comprehensive treatment of these topics, but to consolidate
