--- a/history.tex
+++ b/history.tex
@@ -1,4 +1,4 @@
-\chapter{Brief history of data science}
+\chapter{A brief history of data science}
 \label{chap:history}
 
 \chapterprecishere{``Begin at the beginning,'' the King said gravely, ``and
