Reordering and splitting chapters.

--- a/main.tex
+++ b/main.tex
@@ -296,8 +296,11 @@ visit
 \input{history}
 \input{data}
 \input{project}
-\input{inductive}
+\input{structured}
 \input{handling}
+% \input{exploratory} TODO
+\input{inductive}
+\input{preprocess}
 \input{evaluation}
 \input{planning}
 \input{ethics}
