--- a/references.bib
+++ b/references.bib
@@ -505,3 +505,12 @@ isbn="978-3-319-17091-6"
   year={2016},
   url={https://www.forbes.com/sites/stevedenning/2016/08/10/why-agile-works/}
 }
+
+@article{chawla2002smote,
+  title={SMOTE: synthetic minority over-sampling technique},
+  author={Chawla, Nitesh V and Bowyer, Kevin W and Hall, Lawrence O and Kegelmeyer, W Philip},
+  journal={Journal of artificial intelligence research},
+  volume={16},
+  pages={321--357},
+  year={2002}
+}
