Let generative out of history right now.

--- a/history.tex
+++ b/history.tex
@@ -724,13 +724,13 @@ breakthroughs in the field, winning the 2018 Turing Award\footnote{\url{https://
 % Data mining is the process of discovering patterns in large data sets involving methods at
 % the intersection of machine learning, statistics, and database systems.
 
-\paragraph{Generative deep models}
-
-Nowadays, generative deep models are a hot topic in machine learning. They are a class of
-statistical models that can generate new data instances. They are used in unsupervised
-learning to discover hidden structures in unlabeled data (e.g. clustering), and in
-supervised learning to generate new synthetic data instances.  The most famous generative
-models are the generative transformers and generative adversarial networks.
+% \paragraph{Generative deep models}
+%
+% Nowadays, generative deep models are a hot topic in machine learning. They are a class of
+% statistical models that can generate new data instances. They are used in unsupervised
+% learning to discover hidden structures in unlabeled data (e.g. clustering), and in
+% supervised learning to generate new synthetic data instances.  The most famous generative
+% models are the generative transformers and generative adversarial networks.
 
 \paragraph{LUSI learning theory}
 
