Adjusting History and Data chapters for the new nomenclatures.

--- a/data.tex
+++ b/data.tex
@@ -439,17 +439,18 @@ analyze geographical data.  And so on.
 Each method has its own assumptions and limitations.  Thus, we need to understand the
 nature of the methods we are using.  In particular, we need to understand the
 expected input and output of them.  Whenever the available data do not match the
-requirements of the method, we may perform data handling\footnote{%
+requirements of the method, we may perform data preprocessing\footnote{%
   It is important to highlight that it is expected that some of the methods assumptions
   are not fully met.  These methods are usually robust enough to extract valuable
   knowledge even when data contain imperfections, errors and noise.  However, it is still
-  useful to perform data handling to adjust data as much as possible.%
+  useful to perform data preprocessing to adjust data as much as possible.%
 }.
 
-Data handling mainly includes data cleaning, data transformation, and data
-integration. Data cleaning is the process of detecting and correcting (or removing)
+Data preprocessing mainly includes data cleaning, data transformation, and data
+enhancement. Data cleaning is the process of detecting and correcting (or removing)
 corrupt or inaccurate pieces of data.  Data transformation is the process of converting
-data from one format or type to another.  Data integration is the process of combining
+data from one format or type to another.  Data enhancement is the process of adding
+additional information to the data, usually, by integrating
 data from different sources into a single, unified view.
 
 \subsubsection{Final remarks}
