--- a/history.tex
+++ b/history.tex
@@ -245,7 +245,7 @@ of data handling.
   \end{tikzpicture}
 \end{figurebox}
 
-\Cref{fig:data-handling-history} illutrates the proposed timeline.  Ages are not strict
+\Cref{fig:data-handling-history} illustrates the proposed timeline.  Ages are not strict
 boundaries, but rather periods where some important events happened.  Also, observe that
 the timescale is not linear.  The Pre-digital Age is the longest period, and one could
 divide it into smaller periods.  My choices of ages and their boundaries are motivated by
